Fixed too thin (unreadable) font on some devices

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -47,12 +47,12 @@
 
 .script-font() {
     font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-weight: 100;
+    font-weight: 300;
 }
 
 .body-font() {
-	font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-weight: 100;
+    font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 300;
 }
 
 .body-font-bolder() {
